syntax = "proto2";
package message.order;
message CreateOrderRes
{
    required int64 order_id = 1;
    required string order_number = 2;
    required int64 payable_amount = 3;//应付金额
    required int64 type = 4;//订单类型
    required int64 pintuan_id = 5;//拼团id
}
